--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
 
+    <div id="video_no_played"><p>Sorry video can not be played as you don't have webcam enabled.</p></div>
     <figure id="video_player">
         <div id="video_container">
             <video controls>
